# cel-go

cel/: BUILD.bazel  ast_visitor.go  env.go  homogeneous_literal_validator.go  validator.go  validator_options.go  validator_test.go
cel/validator/: ast_visitor.go  homogeneous_literal_validator.go  validator.go  validator_test.go
validator/: BUILD.bazel  ast_visitor.go  homogeneous_literal_validator.go  options.go  validator.go  validator_test.go
