load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    licenses = ["notice"],  # Apache 2.0
)

go_library(
    name = "go_default_library",
    srcs = [
        "homogeneous_literal_validator.go",
        "options.go",
        "validator.go",
    ],
    importpath = "github.com/google/cel-go/validator",
    visibility = ["//visibility:public"],
    deps = [
        "//checker/decls:go_default_library",
        "//common:go_default_library",
        "//common/containers:go_default_library",
        "//common/debug:go_default_library",
        "//common/operators:go_default_library",
        "//common/overloads:go_default_library",
        "//common/types:go_default_library",
        "//common/types/pb:go_default_library",
        "//common/types/ref:go_default_library",
        "//parser:go_default_library",
        "@org_golang_google_genproto//googleapis/api/expr/v1alpha1:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
        "@org_golang_google_protobuf//types/known/structpb:go_default_library",
    ],
)
